[package]
name = "soroban-stream-contract"
version = "0.1.0"
edition = "2021"
publish = false
autobins = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
fixed-point-math = { workspace = true } 

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }